Modified http client examples